--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=c4d09c342deb8a959163c27032ae2e98",
+    "/css/app.css": "/css/app.css?id=cf43b846d9aef31de243b8f323480aef"
 }
