--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+        "@babel/plugin-transform-runtime": "^7.25.4",
+        "@babel/preset-env": "^7.25.4",
         "@fortawesome/fontawesome-free": "^6.6.0",
         "@popperjs/core": "^2.10.2",
         "axios": "^0.25",
@@ -19,6 +24,11 @@
         "postcss": "^8.1.14",
         "resolve-url-loader": "5.0.0",
         "sass": "^1.32.11",
-        "sass-loader": "^11.0.1"
+        "sass-loader": "^11.0.1",
+        "webpack": "^5.94.0",
+        "webpack-cli": "^5.1.4"
+    },
+    "dependencies": {
+        "jquery": "^3.7.1"
     }
 }
