--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "@babel/preset-env": "^7.25.4",
         "@fortawesome/fontawesome-free": "^6.6.0",
         "@popperjs/core": "^2.10.2",
-        "axios": "^0.25",
+        "axios": "^1.7.5",
         "bootstrap": "^5.1.3",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -29,6 +29,7 @@
         "webpack-cli": "^5.1.4"
     },
     "dependencies": {
-        "jquery": "^3.7.1"
+        "jquery": "^3.7.1",
+        "simditor": "^2.3.21"
     }
 }
