--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
         "imagine/imagine": "^1.3",
+        "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^9.11",
         "laravel/horizon": "~5.9",
         "laravel/sanctum": "^2.14.1",
