--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "laravel/horizon": "~5.9",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
-        "mews/captcha": "~3.0",
+        "mews/captcha": "^3.2.5",
         "mews/purifier": "~3.3",
         "overtrue/laravel-lang": "~6.0",
         "predis/predis": "~1.1",
